--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -10,9 +10,9 @@
 name: OpenWrt-arm64
 
 on:
-  push:
-    branches: 
-      - master
+  #push:
+  #  branches: 
+  #    - master
   watch:
     types: [started]
   # schedule:
@@ -213,6 +213,7 @@ jobs:
         run: |
           make download -j8
           find ./dl/ -size -1024c -exec rm -f {} \;
+          
           df -h
       - name: Compile firmware
         run: |
