--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -109,8 +109,7 @@ jobs:
           CONFIG_TARGET_armvirt=y
           CONFIG_TARGET_armvirt_64=y
           CONFIG_TARGET_armvirt_64_Default=y
-          CONFIG_TARGET_PROFILE="Default"
-          CONFIG_TARGET_ARCH_PACKAGES="aarch64_generic"
+          CONFIG_TARGET_ROOTFS_INITRAMFS=y
           EOF
           # USB2.0支持:
           cat >> .config <<EOF
