--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -109,8 +109,11 @@ jobs:
           CONFIG_TARGET_armvirt=y
           CONFIG_TARGET_armvirt_64=y
           CONFIG_TARGET_armvirt_64_Default=y
-          CONFIG_TARGET_ROOTFS_INITRAMFS=y
-          CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE=y
+          CONFIG_TARGET_ROOTFS_TARGZ=y
+          CONFIG_TARGET_ROOTFS_SQUASHFS=y
+          CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
+          CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
+          CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
           EOF
           # USB2.0支持:
           cat >> .config <<EOF
