--- a/.github/workflows/OpenWrt-MI-R3G.yml
+++ b/.github/workflows/OpenWrt-MI-R3G.yml
@@ -55,7 +55,7 @@ jobs:
           df -h
       - name: Get Sound Code
         run: |
-          git clone -b dev-19.07 https://github.com/Lienol/openwrt
+          git clone -b dev-master https://github.com/Lienol/openwrt
           mv ./openwrt/* .
           rm -rf ./openwrt
           
@@ -144,7 +144,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-          CONFIG_PACKAGE_luci-app-smartdns
+          CONFIG_PACKAGE_luci-app-smartdns=y
           CONFIG_PACKAGE_luci-app-sqm=y
           CONFIG_PACKAGE_luci-app-samba=y
           CONFIG_PACKAGE_luci-app-wol=y
