--- a/.github/workflows/OpenWrt-MI-R3G.yml
+++ b/.github/workflows/OpenWrt-MI-R3G.yml
@@ -157,7 +157,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-vsftpd=y
           CONFIG_PACKAGE_luci-app-vlmcsd=y
           CONFIG_PACKAGE_luci-app-zerotier=y
-          CONFIG_PACKAGE_luci-app-qbittorrent=y
+          #CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-hd-idle=y
           EOF
           # LuCI主题:
