--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -10,9 +10,9 @@
 name: OpenWrt-arm64
 
 on:
-  push:
-    branches: 
-      - master
+  #push:
+  #  branches: 
+  #    - master
   watch:
     types: [started]
   # schedule:
@@ -48,13 +48,13 @@ jobs:
           df -h
       - name: Clone Sound Code
         run: |
-          git clone -b dev-master https://github.com/Lienol/openwrt
-          mv ./openwrt/* .
-          rm -rf ./openwrt
+          git clone https://github.com/coolsnowwolf/lede
+          mv ./lean-lede/* .
+          rm -rf ./lean-lede
           
       - name: FilePath
         run: |
-          sed -i '5 r ./filepatch/arm64-default-settings' ./package/default-settings/files/zzz-default-settings
+          sed -i '5 r ./filepatch/arm64-default-settings' ./package/lean/default-settings/files/zzz-default-settings
 
       - name: Update packages
         run: |
@@ -69,6 +69,8 @@ jobs:
           git clone https://github.com/rufengsuixing/luci-app-adguardhome
           git clone https://github.com/Baozisoftware/luci-app-koolproxy
           git clone https://github.com/project-openwrt/luci-app-unblockneteasemusic
+          git clone https://github.com/pymumu/smartdns.git
+          git clone https://github.com/Apocalypsor/luci-app-smartdns.git
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
@@ -110,11 +112,6 @@ jobs:
           CONFIG_TARGET_armvirt=y
           CONFIG_TARGET_armvirt_64=y
           CONFIG_TARGET_armvirt_64_Default=y
-          CONFIG_TARGET_ROOTFS_TARGZ=y
-          CONFIG_TARGET_ROOTFS_SQUASHFS=y
-          CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
-          CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
-          CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
           EOF
           # USB2.0支持:
           cat >> .config <<EOF
@@ -151,6 +148,9 @@ jobs:
           CONFIG_PACKAGE_luci-app-flowoffload=y
           CONFIG_PACKAGE_luci-app-kodexplorer=y
           #CONFIG_PACKAGE_luci-app-vssr=y
+          CONFIG_PACKAGE_smartdns=y
+          CONFIG_PACKAGE_luci-app-smartdns=y
+          CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
@@ -160,7 +160,6 @@ jobs:
           CONFIG_PACKAGE_luci-app-serverchan=y
           CONFIG_PACKAGE_luci-app-v2ray-server=y
           CONFIG_PACKAGE_luci-app-xlnetacc=y
-          CONFIG_PACKAGE_luci-app-smartdns=y
           CONFIG_PACKAGE_luci-app-softethervpn=y
           CONFIG_PACKAGE_luci-app-sqm=y
           CONFIG_PACKAGE_luci-app-samba=y
@@ -187,8 +186,6 @@ jobs:
           EOF
           # LuCI主题:
           cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-theme-argon=y
-          CONFIG_PACKAGE_luci-theme-rosy=y
           CONFIG_PACKAGE_luci-theme-atmaterial=y
           EOF
           # 常用软件包:
@@ -232,11 +229,14 @@ jobs:
           du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
           du -h --max-depth=1 ./build_dir
           du -h --max-depth=1 ./bin
-      - name: Prepare artifact
-        run: find ./bin/targets/ -type d -name "packages" | xargs rm -rf {}
+    - name: Assemble artifact
+      run: |
+          rm -rf ./artifact/
+          mkdir -p ./artifact/
+          find ./bin/targets/ -name "*default-rootfs*gz*" | xargs -i mv -f {} ./artifact/
 
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: OpenWrt For arm64
-          path: ./bin/targets/
+          name: OpenWrt-arm64-$(date +%m%d)
+          path: ./artifact/
