--- a/.github/workflows/OpenWrt-MI-R3G.yml
+++ b/.github/workflows/OpenWrt-MI-R3G.yml
@@ -55,9 +55,9 @@ jobs:
           df -h
       - name: Clone Sound Code
         run: |
-          git clone -b dev-master https://github.com/Lienol/openwrt
-          mv ./openwrt/* .
-          rm -rf ./openwrt
+          git clone https://github.com/coolsnowwolf/lede
+          mv ./lean-lede/* .
+          rm -rf ./lean-lede
           
       - name: FilePath
         run: |
@@ -69,11 +69,11 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
-          git clone https://github.com/rosywrt/luci-theme-rosy
+          git clone https://github.com/pymumu/smartdns.git
+          git clone https://github.com/Apocalypsor/luci-app-smartdns.git
           
       - name: Update feeds
         run: |
-          ./scripts/feeds clean
           ./scripts/feeds update -a
           ./scripts/feeds install -a
       - name: Generate configuration file
@@ -138,6 +138,9 @@ jobs:
           CONFIG_PACKAGE_luci-app-ddns=y
           CONFIG_DEFAULT_luci-app-flowoffload=y
           CONFIG_PACKAGE_luci-app-firewall=y
+          CONFIG_PACKAGE_smartdns=y
+          CONFIG_PACKAGE_luci-app-smartdns=y
+          CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
           CONFIG_PACKAGE_luci-app-ssr-plus=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Sha dowsocks=y
@@ -157,15 +160,12 @@ jobs:
           CONFIG_PACKAGE_luci-app-vsftpd=y
           CONFIG_PACKAGE_luci-app-vlmcsd=y
           CONFIG_PACKAGE_luci-app-zerotier=y
-          #CONFIG_PACKAGE_luci-app-qbittorrent=y
+          CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-hd-idle=y
           EOF
           # LuCI主题:
           cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-theme-argon=y
           CONFIG_PACKAGE_luci-theme-atmaterial=y
-          CONFIG_PACKAGE_luci-theme-material=y
-          CONFIG_PACKAGE_luci-theme-rosy=y
           EOF
           # 常用软件包:
           cat >> .config <<EOF
@@ -207,5 +207,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
-          name: OpenWrt For MIR3G
+          name: OpenWrt-MIR3G-$(date +%m%d)
           path: ./bin/targets/
