--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -71,11 +71,7 @@ jobs:
         run: |
           sed -i '5 r ./filepatch/arm64-default-settings' ./package/lean/default-settings/files/zzz-default-settings
           curl -sL --connect-timeout 10 --retry 2 https://github.com/vernesong/OpenClash/releases/download/Clash/clash-linux-armv8.tar.gz -o /tmp/clash.tar.gz >/dev/null 2>&1
-          tar zxvf /tmp/clash.tar.gz -C /tmp >/dev/null 2>&1
-          rm -rf /tmp/clash.tar.gz >/dev/null 2>&1
-          chmod 4755 /tmp/clash
-          chown root:root /tmp/clash
-          mv /tmp/clash ./package/openwrt-packages/luci-app-openclash/files/etc/openclash/clash >/dev/null 2>&1
+          tar zxvf /tmp/clash.tar.gz -C ./package/openwrt-packages/luci-app-openclash/files/etc/openclash >/dev/null 2>&1
           
       - name: Update feeds
         run: |
