--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -58,6 +58,8 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
+          git clone https://github.com/kang-mk/luci-app-smartinfo
+          git clone https://github.com/destan19/OpenAppFilter
           git clone https://github.com/1049066154/luci-app-serverchan
           git clone https://github.com/vernesong/OpenClash
           #git clone https://github.com/jerrykuku/luci-app-vssr
@@ -142,6 +144,8 @@ jobs:
           EOF
           # LuCI插件选择:
           cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-app-oaf=y
+          CONFIG_PACKAGE_luci-app-smartinfo=y
           CONFIG_PACKAGE_luci-app-aria2=y
           CONFIG_PACKAGE_luci-app-autoreboot=y
           CONFIG_PACKAGE_luci-app-ddns=y
