--- a/.github/workflows/OpenWrt-MI-R3G.yml
+++ b/.github/workflows/OpenWrt-MI-R3G.yml
@@ -133,7 +133,6 @@ jobs:
           EOF
           # LuCI插件选择:
           cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-app-aria2=y
           CONFIG_PACKAGE_luci-app-autoreboot=y
           CONFIG_DEFAULT_luci-app-flowoffload=y
           CONFIG_PACKAGE_luci-app-firewall=y
@@ -146,7 +145,6 @@ jobs:
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Socks=y
           CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
-          CONFIG_PACKAGE_luci-app-smartdns=y
           CONFIG_PACKAGE_luci-app-sqm=y
           CONFIG_PACKAGE_luci-app-samba=y
           CONFIG_PACKAGE_luci-app-wol=y
@@ -163,13 +161,9 @@ jobs:
           CONFIG_PACKAGE_luci-app-hd-idle=y
           EOF
           # LuCI主题:
-          cat >> .config <<EOF
-          CONFIG_PACKAGE_luci-theme-atmaterial=y
-          EOF
-          # IPV6配置
-          cat >> .config <<EOF
-
-          EOF
+          # cat >> .config <<EOF
+          # CONFIG_PACKAGE_luci-theme-atmaterial=y
+          # EOF
           # 常用软件包:
           cat >> .config <<EOF
           CONFIG_PACKAGE_curl=y
