--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -144,6 +144,7 @@ jobs:
           EOF
           # LuCI插件选择:
           cat >> .config <<EOF
+          CONFIG_PACKAGE_luci-app-haproxy-tcp=y
           CONFIG_PACKAGE_luci-app-oaf=y
           CONFIG_PACKAGE_luci-app-smartinfo=y
           CONFIG_PACKAGE_luci-app-aria2=y
