--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -10,9 +10,9 @@
 name: OpenWrt-arm64
 
 on:
-  #push:
-  #  branches: 
-  #    - master
+  push:
+    branches: 
+      - master
   watch:
     types: [started]
   # schedule:
@@ -24,12 +24,12 @@ jobs:
 
   build:
 
-    runs-on: ubuntu-latest
+    name: Build OpenWrt and release
+    runs-on: ubuntu-18.04
 
     steps:
-
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           ref: master
 
@@ -41,11 +41,11 @@ jobs:
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
           sudo -E apt-get update
-          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3.5 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler
+          sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
-
           df -h
+
       - name: Clone Sound Code
         run: |
           git clone https://github.com/coolsnowwolf/lede
@@ -58,20 +58,23 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
-          git clone https://github.com/kang-mk/luci-app-smartinfo
-          git clone https://github.com/destan19/OpenAppFilter
           git clone https://github.com/1049066154/luci-app-serverchan
           git clone https://github.com/vernesong/OpenClash
-          #git clone https://github.com/jerrykuku/luci-app-vssr
           git clone https://github.com/rufengsuixing/luci-app-adguardhome
           git clone https://github.com/Baozisoftware/luci-app-koolproxy
-          git clone https://github.com/project-openwrt/luci-app-unblockneteasemusic
           git clone https://github.com/pymumu/smartdns.git
-          git clone https://github.com/Apocalypsor/luci-app-smartdns.git
+          wget https://github.com/pymumu/luci-app-smartdns/archive/lede.zip
+          unzip lede.zip && mv luci-app-smartdns-lede luci-app-smartdns
+          #git clone https://github.com/kang-mk/luci-app-smartinfo
+          #git clone https://github.com/destan19/OpenAppFilter
+          #git clone https://github.com/jerrykuku/luci-app-vssr
+          #git clone https://github.com/project-openwrt/luci-app-unblockneteasemusic
+          #git clone https://github.com/Apocalypsor/luci-app-smartdns.git
           
       - name: FilePath
         run: |
           sed -i '5 r ./filepatch/arm64-default-settings' ./package/lean/default-settings/files/zzz-default-settings
+          
       - name: Update feeds
         run: |
           ./scripts/feeds update -a
@@ -183,9 +186,10 @@ jobs:
           CONFIG_PACKAGE_luci-app-filebrowser=y
           CONFIG_PACKAGE_luci-app-adguardhome=y
           CONFIG_PACKAGE_luci-app-koolproxy=y
-          CONFIG_PACKAGE_luci-app-passwall=y
+          #CONFIG_PACKAGE_luci-app-passwall=y
           CONFIG_PACKAGE_luci-ssl-openssl=y
           CONFIG_PACKAGE_luci-app-unblockmusic=y
+          CONFIG_PACKAGE_luci-app-wrtbwmon=y
           EOF
           # LuCI主题:
           # cat >> .config <<EOF
