--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -10,9 +10,9 @@
 name: OpenWrt-arm64
 
 on:
-  #push:
-  #  branches: 
-  #    - master
+  push:
+    branches: 
+      - master
   watch:
     types: [started]
   # schedule:
@@ -58,22 +58,22 @@ jobs:
           mkdir openwrt-packages
           cd openwrt-packages
           git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
-          git clone https://github.com/1049066154/luci-app-serverchan
+          git clone https://github.com/tty228/luci-app-serverchan
           git clone https://github.com/vernesong/OpenClash
           git clone https://github.com/rufengsuixing/luci-app-adguardhome
           git clone https://github.com/Baozisoftware/luci-app-koolproxy
           git clone https://github.com/pymumu/smartdns.git
-          wget https://github.com/pymumu/luci-app-smartdns/archive/lede.zip
-          unzip lede.zip && mv luci-app-smartdns-lede luci-app-smartdns
+          git clone https://github.com/Apocalypsor/luci-app-smartdns.git
           #git clone https://github.com/kang-mk/luci-app-smartinfo
           #git clone https://github.com/destan19/OpenAppFilter
           #git clone https://github.com/jerrykuku/luci-app-vssr
           #git clone https://github.com/project-openwrt/luci-app-unblockneteasemusic
-          #git clone https://github.com/Apocalypsor/luci-app-smartdns.git
+          
           
       - name: FilePath
         run: |
           sed -i '5 r ./filepatch/arm64-default-settings' ./package/lean/default-settings/files/zzz-default-settings
+          sed -i 's#thermal\/thermal_zone\*\/temp#hwmon\/hwmon0\/temp#g' ./package/openwrt-packages/luci-app-serverchan/root/usr/bin/serverchan/serverchan
           
       - name: Update feeds
         run: |
