--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -73,6 +73,7 @@ jobs:
       - name: FilePath
         run: |
           sed -i '5 r ./filepatch/arm64-default-settings' ./package/lean/default-settings/files/zzz-default-settings
+          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           sed -i 's#thermal\/thermal_zone\*\/temp#hwmon\/hwmon0\/temp1_input#g' ./package/openwrt-packages/luci-app-serverchan/root/usr/bin/serverchan/serverchan
           
       - name: Update feeds
