--- a/.github/workflows/OpenWrt-MI-R3G.yml
+++ b/.github/workflows/OpenWrt-MI-R3G.yml
@@ -55,6 +55,7 @@ jobs:
       - name: FilePath
         run: |
           sed -i '5 r ./filepatch/r3g-default-settings' ./package/lean/default-settings/files/zzz-default-settings
+          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           
       - name: Update packages
         run: |
