--- a/.github/workflows/OpenWrt-MI-R3G.yml
+++ b/.github/workflows/OpenWrt-MI-R3G.yml
@@ -55,7 +55,6 @@ jobs:
       - name: FilePath
         run: |
           sed -i '5 r ./filepatch/r3g-default-settings' ./package/lean/default-settings/files/zzz-default-settings
-          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           
       - name: Update packages
         run: |
@@ -68,6 +67,7 @@ jobs:
           
       - name: Update feeds
         run: |
+          sed -i 's/\"#src-git\"/\"src-git\"/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./scripts/feeds install -a
       - name: Generate configuration file
