--- a/.github/workflows/OpenWrt-arm64-test.yml
+++ b/.github/workflows/OpenWrt-arm64-test.yml
@@ -246,7 +246,7 @@ jobs:
       #    path: ./bin/targets/
 
       - name: Upload artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         with:
           name: OpenWrt-arm64-Rootfs-test
           path: ./artifact/
