--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -242,13 +242,13 @@ jobs:
           find ./bin/targets/ -name "*default-rootfs*gz*" | xargs -i mv -f {} ./artifact/
 
       - name: Upload artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         with:
           name: OpenWrt For arm64
           path: ./bin/targets/
 
       - name: Upload artifact
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         with:
           name: OpenWrt-arm64-Rootfs
           path: ./artifact/
