--- a/.github/workflows/OpenWrt-arm64-test.yml
+++ b/.github/workflows/OpenWrt-arm64-test.yml
@@ -22,12 +22,15 @@ on:
 
 jobs:
 
-  build:
+  build_openwrt:
 
-    name: Build OpenWrt
-    runs-on: ubuntu-18.04
+    name: Build OpenWrt firmware
+    runs-on: ubuntu-latest
 
+    if: github.event.repository.owner.id == github.event.sender.id
+    
     steps:
+
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -39,12 +42,13 @@ jobs:
         run: |
           docker rmi `docker images -q`
           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d
-          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+          sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php* android*
           sudo -E apt-get update
           sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs gcc-multilib g++-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler antlr3 gperf swig
           sudo -E apt-get -y autoremove --purge
           sudo -E apt-get clean
           df -h
+          
       - name: Clone Sound Code
         run: |
           git clone https://github.com/coolsnowwolf/lede
@@ -75,7 +79,7 @@ jobs:
           
       - name: Update feeds
         run: |
-          sed -i 's/\"#src-git\"/\"src-git\"/g' ./feeds.conf.default
+          sed -i 's/#src-git helloworld/src-git helloworld/g' ./feeds.conf.default
           ./scripts/feeds update -a
           ./filepatch/smartdns.sh
           ./scripts/feeds install -a
@@ -250,3 +254,12 @@ jobs:
         with:
           name: OpenWrt-arm64-Rootfs-test
           path: ./artifact/
+
+      - name: Upload release asset
+        if: github.event == 'release'
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.YOURTOKEN }}
+          file: ./artifact/firmware/*
+          tag: ${{ github.ref }}
+          file_glob: true
