--- a/.github/workflows/OpenWrt-arm64-test.yml
+++ b/.github/workflows/OpenWrt-arm64-test.yml
@@ -64,7 +64,7 @@ jobs:
           git clone https://github.com/tty228/luci-app-serverchan
           git clone https://github.com/vernesong/OpenClash
           git clone https://github.com/rufengsuixing/luci-app-adguardhome
-          git clone https://github.com/Baozisoftware/luci-app-koolproxy
+          #git clone https://github.com/Baozisoftware/luci-app-koolproxy
           #git clone https://github.com/pymumu/smartdns.git
           #git clone https://github.com/Apocalypsor/luci-app-smartdns.git
           #git clone https://github.com/kang-mk/luci-app-smartinfo
@@ -165,7 +165,6 @@ jobs:
           CONFIG_PACKAGE_luci-app-ttyd=y
           CONFIG_PACKAGE_luci-app-wol=y
           CONFIG_PACKAGE_luci-app-ramfree=y
-          CONFIG_PACKAGE_luci-app-squid=y
           CONFIG_PACKAGE_luci-app-frpc=y
           CONFIG_PACKAGE_luci-app-usb-printer=y
           CONFIG_PACKAGE_luci-app-upnp=y
@@ -174,10 +173,10 @@ jobs:
           CONFIG_PACKAGE_luci-app-zerotier=y
           CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-openclash=y
-          CONFIG_PACKAGE_luci-app-transmission=y
-          CONFIG_PACKAGE_luci-app-filebrowser=y
+          #CONFIG_PACKAGE_luci-app-transmission is not set
+          #CONFIG_PACKAGE_luci-app-filebrowser is not set
           CONFIG_PACKAGE_luci-app-adguardhome=y
-          CONFIG_PACKAGE_luci-app-koolproxy=y
+          #CONFIG_PACKAGE_luci-app-koolproxy is not set
           #CONFIG_PACKAGE_luci-app-passwall is not set
           CONFIG_PACKAGE_luci-ssl-openssl=y
           CONFIG_PACKAGE_luci-app-unblockmusic=y
