--- a/.github/workflows/OpenWrt-arm64-test.yml
+++ b/.github/workflows/OpenWrt-arm64-test.yml
@@ -66,7 +66,7 @@ jobs:
           git clone https://github.com/rufengsuixing/luci-app-adguardhome
           #git clone https://github.com/Baozisoftware/luci-app-koolproxy
           #git clone https://github.com/pymumu/smartdns.git
-          #git clone https://github.com/Apocalypsor/luci-app-smartdns.git
+          git clone https://github.com/Apocalypsor/luci-app-smartdns.git
           #git clone https://github.com/kang-mk/luci-app-smartinfo
           #git clone https://github.com/destan19/OpenAppFilter
           #git clone https://github.com/jerrykuku/luci-app-vssr
