--- a/.github/workflows/OpenWrt-arm64-test.yml
+++ b/.github/workflows/OpenWrt-arm64-test.yml
@@ -10,9 +10,9 @@
 name: OpenWrt-arm64-test
 
 on:
-  push:
-    branches: 
-      - master
+  #push:
+  #  branches: 
+  #    - master
   watch:
     types: [started]
   # schedule:
