--- a/.github/workflows/OpenWrt-arm64.yml
+++ b/.github/workflows/OpenWrt-arm64.yml
@@ -255,6 +255,6 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.YOURTOKEN }}
-          file: ./artifact/firmware/*
-          tag: ${{ github.ref }}
-          file_glob: true
+          file: ./artifact/*
+          
+
