--- a/.github/workflows/OpenWrt-MI-R3G.yml
+++ b/.github/workflows/OpenWrt-MI-R3G.yml
@@ -66,7 +66,7 @@ jobs:
           cd openwrt-packages
           git clone https://github.com/openwrt-develop/luci-theme-atmaterial.git
           git clone https://github.com/pymumu/smartdns.git
-          git clone https://github.com/Apocalypsor/luci-app-smartdns.git
+          git clone -b lede https://github.com/pymumu/luci-app-smartdns.git
           
       - name: Update feeds
         run: |
